# eventplanner

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  static.conf
.github/workflows/: ci.yml  release.yml
frontend/: .eslintrc.js  app.vue  i18n.config.ts  nuxt.config.ts  nuxt.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/assets/: main.sass
frontend/components/: EventEditor.vue  VisitorEditor.vue  VisitorList.vue  VoteOverview.vue
frontend/components/form/: DatePicker.vue  Dialog.vue  FloatingDialog.vue  PasswordInput.vue
frontend/components/layout/: Authentication.vue  Footer.vue  Navigation.vue  Notification.vue
frontend/composables/: form.ts  responsive.ts  types.ts
frontend/i18n/locales/: de.json
frontend/locales/: de.json  en.json
frontend/middleware/: auth.ts
frontend/pages/: dashboard.vue  index.vue  signup.vue  vote.vue
frontend/plugins/: surrealdb.ts  vuetify.ts
frontend/stores/: notifications.ts
src/: main.rs  tests.rs  up.suql
