[package]
name = "eventplanner"
version = "0.1.2-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9+20230402" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
version-compare = "0.1.1"

[dev-dependencies]
chrono = "0.4.26"
getset = "0.1.2"
nanoid = "0.4.0"
serde = { version = "1.0.177", features = ["derive"] }
