[package]
name = "eventplanner"
version = "1.0.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }
surrealdb = "2.1.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
version-compare = "0.2.0"

[dev-dependencies]
chrono = "0.4.39"
getset = "0.1.3"
nanoid = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
